spec/e2e/operator/negate_nonnum.lit
-"s" # error: [line 1] Runtime error: Right side operand of type String must implement the 'neg' method.
